--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -261,8 +261,318 @@ jobs:
           
           echo "✅ SSH configured"
 
+      - name: Comprehensive SSH Diagnostics
+        run: |
+          echo "═══════════════════════════════════════════════════════════"
+          echo "🔍 COMPREHENSIVE SSH DIAGNOSTICS"
+          echo "═══════════════════════════════════════════════════════════"
+          echo ""
+          
+          SERVER_HOST="${{ secrets.SERVER_HOST }}"
+          SERVER_USER="${{ secrets.SERVER_USER }}"
+          SSH_PORT="${SSH_PORT:-22}"
+          
+          echo "Target: ${SERVER_USER}@${SERVER_HOST}:${SSH_PORT}"
+          echo ""
+          
+          # Initialize diagnostics results
+          DIAGNOSTICS_PASSED=true
+          
+          # 1. Check hostname/IP address format
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "1️⃣  Checking hostname/IP address..."
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          if [ -z "$SERVER_HOST" ]; then
+            echo "❌ SERVER_HOST is empty!"
+            DIAGNOSTICS_PASSED=false
+          else
+            echo "✅ SERVER_HOST is set: $SERVER_HOST"
+            
+            # Check if it's an IP or hostname
+            if [[ $SERVER_HOST =~ ^[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$ ]]; then
+              echo "   Format: IP address"
+              # Validate IP ranges
+              IFS='.' read -ra ADDR <<< "$SERVER_HOST"
+              for i in "${ADDR[@]}"; do
+                if [ "$i" -gt 255 ]; then
+                  echo "   ⚠️  Warning: Invalid IP address (octet > 255)"
+                  DIAGNOSTICS_PASSED=false
+                fi
+              done
+            else
+              echo "   Format: Hostname/Domain"
+            fi
+          fi
+          
+          if [ -z "$SERVER_USER" ]; then
+            echo "❌ SERVER_USER is empty!"
+            DIAGNOSTICS_PASSED=false
+          else
+            echo "✅ SERVER_USER is set: $SERVER_USER"
+          fi
+          echo ""
+          
+          # 2. Check network connectivity (ping)
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "2️⃣  Checking network connectivity (ping)..."
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          if ping -c 3 -W 5 "$SERVER_HOST" > /dev/null 2>&1; then
+            echo "✅ Server is reachable via ping"
+            ping -c 3 "$SERVER_HOST" | head -5
+          else
+            echo "❌ Server is NOT reachable via ping"
+            echo "   This could indicate:"
+            echo "   - Wrong hostname/IP address"
+            echo "   - Server is down"
+            echo "   - Network connectivity issues"
+            echo "   - Firewall blocking ICMP (ping) - this is normal for some servers"
+            DIAGNOSTICS_PASSED=false
+          fi
+          echo ""
+          
+          # 3. Check SSH port connectivity (nc/telnet)
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "3️⃣  Checking SSH port ${SSH_PORT} connectivity..."
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          if command -v nc > /dev/null 2>&1; then
+            if timeout 5 nc -zv "$SERVER_HOST" "$SSH_PORT" 2>&1; then
+              echo "✅ Port ${SSH_PORT} is open and accepting connections"
+            else
+              echo "❌ Port ${SSH_PORT} is NOT accessible"
+              echo "   This could indicate:"
+              echo "   - Firewall blocking port ${SSH_PORT}"
+              echo "   - SSH service not running on server"
+              echo "   - Wrong port number"
+              DIAGNOSTICS_PASSED=false
+            fi
+          else
+            echo "⚠️  'nc' (netcat) not available, skipping port check"
+            echo "   Testing with SSH connection instead..."
+          fi
+          echo ""
+          
+          # 4. Check SSH service status (if we can connect)
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "4️⃣  Checking SSH service status..."
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          # Try to connect and check SSH service
+          SSH_OUTPUT=$(timeout 10 ssh -i ~/.ssh/deploy_key \
+            -o StrictHostKeyChecking=no \
+            -o ConnectTimeout=10 \
+            -o BatchMode=yes \
+            -o PasswordAuthentication=no \
+            "$SERVER_USER@$SERVER_HOST" \
+            "systemctl is-active sshd 2>/dev/null || systemctl is-active ssh 2>/dev/null || service ssh status 2>/dev/null | head -1 || echo 'unknown'" 2>&1)
+          
+          if echo "$SSH_OUTPUT" | grep -q "active\|running"; then
+            echo "✅ SSH service appears to be running"
+            echo "   Status: $SSH_OUTPUT"
+          elif echo "$SSH_OUTPUT" | grep -q "Connection refused\|Connection timed out\|No route to host"; then
+            echo "❌ Cannot check SSH service - connection failed"
+            echo "   Error: $SSH_OUTPUT"
+            DIAGNOSTICS_PASSED=false
+          else
+            echo "⚠️  Could not determine SSH service status"
+            echo "   Output: $SSH_OUTPUT"
+            echo "   (This might be okay if SSH is running but service command differs)"
+          fi
+          echo ""
+          
+          # 5. Check SSH key format and validity
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "5️⃣  Checking SSH private key format..."
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          if [ -f ~/.ssh/deploy_key ]; then
+            if ssh-keygen -l -f ~/.ssh/deploy_key > /dev/null 2>&1; then
+              echo "✅ SSH private key format is valid"
+              KEY_INFO=$(ssh-keygen -l -f ~/.ssh/deploy_key)
+              echo "   $KEY_INFO"
+              
+              # Extract public key for verification
+              echo ""
+              echo "   Public key (for server verification):"
+              PUBLIC_KEY=$(ssh-keygen -y -f ~/.ssh/deploy_key 2>/dev/null)
+              if [ -n "$PUBLIC_KEY" ]; then
+                echo "   $PUBLIC_KEY"
+                echo ""
+                echo "   💡 To add this key to server, run on server:"
+                echo "      echo '$PUBLIC_KEY' >> ~/.ssh/authorized_keys"
+                echo "      chmod 600 ~/.ssh/authorized_keys"
+                echo "      chmod 700 ~/.ssh"
+              else
+                echo "   ⚠️  Could not extract public key"
+              fi
+            else
+              echo "❌ SSH private key format is INVALID"
+              echo "   Key should start with: -----BEGIN"
+              DIAGNOSTICS_PASSED=false
+            fi
+          else
+            echo "❌ SSH private key file not found!"
+            DIAGNOSTICS_PASSED=false
+          fi
+          echo ""
+          
+          # 6. Check if public key is in server's authorized_keys
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "6️⃣  Checking if public key is in server's authorized_keys..."
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          PUBLIC_KEY=$(ssh-keygen -y -f ~/.ssh/deploy_key 2>/dev/null)
+          if [ -n "$PUBLIC_KEY" ]; then
+            # Extract key fingerprint for comparison
+            LOCAL_FINGERPRINT=$(ssh-keygen -l -f ~/.ssh/deploy_key | awk '{print $2}')
+            
+            # Try to check authorized_keys on server
+            SERVER_KEYS=$(timeout 10 ssh -i ~/.ssh/deploy_key \
+              -o StrictHostKeyChecking=no \
+              -o ConnectTimeout=10 \
+              -o BatchMode=yes \
+              "$SERVER_USER@$SERVER_HOST" \
+              "cat ~/.ssh/authorized_keys 2>/dev/null | grep -v '^#' | grep -v '^$'" 2>&1)
+            
+            if echo "$SERVER_KEYS" | grep -q "Connection refused\|Connection timed out\|Permission denied\|Host key verification failed"; then
+              echo "⚠️  Cannot check authorized_keys - connection failed"
+              echo "   This is expected if key is not yet added"
+              echo "   Error: $(echo "$SERVER_KEYS" | head -3)"
+            elif echo "$SERVER_KEYS" | grep -q "$PUBLIC_KEY\|$LOCAL_FINGERPRINT"; then
+              echo "✅ Public key appears to be in server's authorized_keys"
+            elif [ -n "$SERVER_KEYS" ] && [ "$SERVER_KEYS" != "Permission denied" ]; then
+              echo "❌ Public key NOT found in server's authorized_keys"
+              echo ""
+              echo "   To fix this, run on server:"
+              echo "   mkdir -p ~/.ssh"
+              echo "   chmod 700 ~/.ssh"
+              echo "   echo '$PUBLIC_KEY' >> ~/.ssh/authorized_keys"
+              echo "   chmod 600 ~/.ssh/authorized_keys"
+              DIAGNOSTICS_PASSED=false
+            else
+              echo "⚠️  Could not verify authorized_keys"
+              echo "   This might be okay if using password auth or different key location"
+            fi
+          else
+            echo "⚠️  Could not extract public key for verification"
+          fi
+          echo ""
+          
+          # 7. Check GitHub Actions IP ranges (informational)
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "7️⃣  Checking GitHub Actions IP information..."
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "Current runner IP information:"
+          curl -s ifconfig.me 2>/dev/null && echo " (external IP)" || echo "Could not determine IP"
+          echo ""
+          echo "⚠️  Note: GitHub Actions uses dynamic IPs"
+          echo "   If server firewall restricts by IP, you may need to:"
+          echo "   1. Allow GitHub Actions IP ranges:"
+          echo "      https://api.github.com/meta (check 'actions' IPs)"
+          echo "   2. Or configure server to allow all IPs (less secure)"
+          echo "   3. Or use SSH key-based auth without IP restrictions"
+          echo ""
+          
+          # 8. Test SSH connection with detailed output
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          echo "8️⃣  Testing SSH connection..."
+          echo "━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━"
+          CONNECTION_TEST=$(timeout 15 ssh -i ~/.ssh/deploy_key \
+            -o StrictHostKeyChecking=no \
+            -o ConnectTimeout=10 \
+            -o BatchMode=yes \
+            -o PasswordAuthentication=no \
+            "$SERVER_USER@$SERVER_HOST" \
+            "echo 'SSH_CONNECTION_SUCCESS'" 2>&1)
+          
+          if echo "$CONNECTION_TEST" | grep -q "SSH_CONNECTION_SUCCESS"; then
+            echo "✅ SSH connection test PASSED!"
+            echo "   Connection is working correctly"
+          elif echo "$CONNECTION_TEST" | grep -q "Permission denied"; then
+            echo "❌ SSH connection FAILED: Permission denied"
+            echo "   This usually means:"
+            echo "   - Public key not in ~/.ssh/authorized_keys"
+            echo "   - Wrong SSH key"
+            echo "   - Incorrect file permissions on server"
+            echo "   Error details:"
+            echo "$CONNECTION_TEST" | head -5
+            DIAGNOSTICS_PASSED=false
+          elif echo "$CONNECTION_TEST" | grep -q "Connection refused"; then
+            echo "❌ SSH connection FAILED: Connection refused"
+            echo "   This usually means:"
+            echo "   - SSH service not running"
+            echo "   - Wrong port number"
+            echo "   - Firewall blocking the connection"
+            DIAGNOSTICS_PASSED=false
+          elif echo "$CONNECTION_TEST" | grep -q "Connection timed out"; then
+            echo "❌ SSH connection FAILED: Connection timed out"
+            echo "   This usually means:"
+            echo "   - Firewall blocking port ${SSH_PORT}"
+            echo "   - Network connectivity issues"
+            echo "   - Server not responding"
+            DIAGNOSTICS_PASSED=false
+          elif echo "$CONNECTION_TEST" | grep -q "No route to host"; then
+            echo "❌ SSH connection FAILED: No route to host"
+            echo "   This usually means:"
+            echo "   - Wrong hostname/IP address"
+            echo "   - Network routing issues"
+            DIAGNOSTICS_PASSED=false
+          else
+            echo "⚠️  SSH connection test returned unexpected result:"
+            echo "$CONNECTION_TEST" | head -10
+            DIAGNOSTICS_PASSED=false
+          fi
+          echo ""
+          
+          # Summary
+          echo "═══════════════════════════════════════════════════════════"
+          echo "📊 DIAGNOSTICS SUMMARY"
+          echo "═══════════════════════════════════════════════════════════"
+          if [ "$DIAGNOSTICS_PASSED" = true ]; then
+            echo "✅ All diagnostics passed! SSH connection should work."
+          else
+            echo "❌ Some diagnostics failed. Please review the issues above."
+            echo ""
+            echo "Common fixes:"
+            echo "1. Firewall blocking port ${SSH_PORT}:"
+            echo "   - Check server firewall: sudo ufw status (Ubuntu/Debian)"
+            echo "   - Allow SSH: sudo ufw allow ${SSH_PORT}/tcp"
+            echo "   - Or: sudo iptables -A INPUT -p tcp --dport ${SSH_PORT} -j ACCEPT"
+            echo ""
+            echo "2. SSH service not running:"
+            echo "   - Start SSH: sudo systemctl start sshd (or ssh)"
+            echo "   - Enable on boot: sudo systemctl enable sshd"
+            echo ""
+            echo "3. Wrong hostname/IP:"
+            echo "   - Verify SERVER_HOST secret is correct"
+            echo "   - Test with: ping $SERVER_HOST"
+            echo ""
+            echo "4. Public key not added:"
+            echo "   - Extract: ssh-keygen -y -f ~/.ssh/deploy_key"
+            echo "   - Add to server: echo 'PUBLIC_KEY' >> ~/.ssh/authorized_keys"
+            echo "   - Set permissions: chmod 600 ~/.ssh/authorized_keys"
+            echo ""
+            echo "5. GitHub Actions IP restrictions:"
+            echo "   - Check server firewall allows GitHub Actions IPs"
+            echo "   - Or configure SSH to allow key-based auth from any IP"
+            echo ""
+            echo "6. Network connectivity:"
+            echo "   - Verify server is online: ping $SERVER_HOST"
+            echo "   - Check DNS resolution if using hostname"
+          fi
+          echo "═══════════════════════════════════════════════════════════"
+          echo ""
+          
+          # Don't fail the workflow here, just report - let the actual connection test handle failures
+          if [ "$DIAGNOSTICS_PASSED" = false ]; then
+            echo "⚠️  Continuing to connection test despite diagnostic failures..."
+          fi
+
       - name: Test SSH connection
         run: |
+          echo "═══════════════════════════════════════════════════════════"
+          echo "🔌 TESTING SSH CONNECTION"
+          echo "═══════════════════════════════════════════════════════════"
+          echo ""
+          echo "Note: If this fails, check the 'Comprehensive SSH Diagnostics' step above"
+          echo "for detailed information about what might be wrong."
+          echo ""
           echo "Testing SSH connection..."
           echo "Target: ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }}"
           echo "Port: ${SSH_PORT:-22}"
@@ -312,31 +622,45 @@ jobs:
           
           if [ "$CONNECTION_SUCCESS" = false ]; then
             echo ""
-            echo "❌ SSH connection failed after $MAX_RETRIES attempts!"
+            echo "═══════════════════════════════════════════════════════════"
+            echo "❌ SSH CONNECTION FAILED AFTER $MAX_RETRIES ATTEMPTS!"
+            echo "═══════════════════════════════════════════════════════════"
             echo ""
-            echo "Troubleshooting steps:"
-            echo "1. Verify SERVER_HOST is correct: ${{ secrets.SERVER_HOST }}"
-            echo "2. Verify SERVER_USER is correct: ${{ secrets.SERVER_USER }}"
-            echo "3. Check if server is accessible: ping ${{ secrets.SERVER_HOST }}"
-            echo "4. Verify SSH service is running on server"
-            echo "5. Check server firewall allows port 22 (or custom SSH port)"
-            echo "6. Verify public key is added to server:"
-            echo "   - Extract public key: ssh-keygen -y -f ~/.ssh/deploy_key"
-            echo "   - Add to server: echo 'PUBLIC_KEY' >> ~/.ssh/authorized_keys"
-            echo "   - Set permissions: chmod 600 ~/.ssh/authorized_keys"
-            echo "7. Check if server allows connections from GitHub Actions IP ranges"
-            echo "8. Verify SSH_PRIVATE_KEY secret is correctly formatted (should start with -----BEGIN)"
+            echo "📋 Please review the 'Comprehensive SSH Diagnostics' step above"
+            echo "   for detailed information about each potential issue."
             echo ""
-            echo "To extract public key for server setup:"
-            echo "  ssh-keygen -y -f <private_key_file>"
+            echo "Quick troubleshooting checklist:"
             echo ""
-            echo "Common issues:"
-            echo "- Firewall blocking port 22"
-            echo "- SSH service not running"
-            echo "- Wrong hostname/IP address"
-            echo "- Network connectivity issues"
-            echo "- Server not allowing connections from GitHub Actions IPs"
-            echo "- Public key not added to server's ~/.ssh/authorized_keys"
+            echo "1. ✅ Firewall blocking port ${SSH_PORT:-22}"
+            echo "   → Check server firewall: sudo ufw status"
+            echo "   → Allow SSH: sudo ufw allow ${SSH_PORT:-22}/tcp"
+            echo ""
+            echo "2. ✅ SSH service not running"
+            echo "   → Check status: sudo systemctl status sshd"
+            echo "   → Start service: sudo systemctl start sshd"
+            echo ""
+            echo "3. ✅ Wrong hostname/IP address"
+            echo "   → Verify SERVER_HOST secret: ${{ secrets.SERVER_HOST }}"
+            echo "   → Test connectivity: ping ${{ secrets.SERVER_HOST }}"
+            echo ""
+            echo "4. ✅ Network connectivity issues"
+            echo "   → Check if server is online"
+            echo "   → Verify DNS resolution (if using hostname)"
+            echo ""
+            echo "5. ✅ Server not allowing connections from GitHub Actions IPs"
+            echo "   → Check firewall rules"
+            echo "   → Allow GitHub Actions IP ranges (see diagnostics above)"
+            echo ""
+            echo "6. ✅ Public key not added to server's ~/.ssh/authorized_keys"
+            echo "   → Extract public key: ssh-keygen -y -f ~/.ssh/deploy_key"
+            echo "   → Add to server:"
+            echo "     mkdir -p ~/.ssh"
+            echo "     chmod 700 ~/.ssh"
+            echo "     echo 'PUBLIC_KEY' >> ~/.ssh/authorized_keys"
+            echo "     chmod 600 ~/.ssh/authorized_keys"
+            echo ""
+            echo "For more details, check the diagnostics output above."
+            echo "═══════════════════════════════════════════════════════════"
             exit 1
           fi
 
